# cgcg_water_shader

./: .gitignore  README.md  README.txt  customPlugInTest.hipnc  water_particles_test.hipnc  water_shader.hipnc
HOM_WAVE/: SOP_HOMWave.C  SOP_HOMWave.exp  SOP_HOMWave.h  SOP_HOMWave.lib
Plug-In Builds/: GerstnerWaveGenerator.exp  GerstnerWaveGenerator.lib  SOP_NodeTemplate.exp  SOP_NodeTemplate.lib
SOP_Flatten/: SOP_Flatten.C  SOP_Flatten.exp  SOP_Flatten.h  SOP_Flatten.lib
SOP_GerstnerWaves/: CMakeLists.txt  CircularGerstnerWave.h  GerstnerWave.h  GerstnerWaveGenerator.cpp  GerstnerWaveGenerator.h  LocalGerstnerWave.h  Names.h  ParallelAdditionEvaluator.cpp  ParallelAdditionEvaluator.h  SingleGerstnerWave.h
SOP_Template/: CMakeLists.txt  GerstnerWave.h  GerstnerWaveGenerator.cpp  GerstnerWaveGenerator.h  ParallelAdditionEvaluator.h  SOP_NodeTemplate.C  SOP_NodeTemplate.exp  SOP_NodeTemplate.h  SOP_NodeTemplate.lib  SinWave.h
